apps/radarr/ingress-radarr-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: radarr
      port:
        number: 7878
  tls:
    - hosts:
        - radarr
